# mumemto

./: .gitignore  CMakeLists.txt  Dockerfile  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: docker-image.yml
CMakeModules/: ConfigureCompilerClang.cmake  ConfigureCompilerGcc.cmake
analysis/: find_inversions_with_scaffold.py  mum_coverage.py  utils.py  viz_mums.py  viz_mums_interactive.py
include/: dictionary.hpp  direct_gsacak.hpp  mem_finder.hpp  mum_finder.hpp  mumsio.hpp  newscan.hpp  parse.hpp  parse_mums.hpp  pfp.hpp  pfp_lcp_mum.hpp  pfp_mum.hpp  read_arrays.hpp  ref_builder.hpp
mumemto/: __init__.py  collinear_block.py  convert_thresh.py  extract_mums.py  find_inversions.py  get_sequence_info.py  mem_density.py  merge_mums.py  mum_coverage.py  mum_to_bed.py  mum_to_bum.py  mum_to_bumbl.py  mum_to_tabix.py  mumemto  trim_mums.py  utils.py  viz_mums.py  viz_mums_interactive.py
mumemto_library/: CMakeLists.txt  MumemtoConfig.cmake.in  README.md  mumemto.h  mumemto.hpp  mumemto_api.cpp  mumemto_api.hpp  mumemto_util.cpp
python_bindings/: CMakeLists.txt  README.md  pyproject.toml
python_bindings/python/mumemto/: __init__.py
python_bindings/src/: mumemto_pybind.cpp
src/: CMakeLists.txt  compute_lengths.cpp  extract_mums.cpp  merge_candidates.cpp  pfp_mum.cpp  ref_builder.cpp
